Add gyoza recipe and image

--- a/recipes/gyoza.html
+++ b/recipes/gyoza.html
@@ -8,5 +8,22 @@
 </head>
 <body>
     <h1>Gyoza fom TJs</h1>
+    <img src="../images/gyoza.jpg">
+    <h2>Description</h2>
+    <p>TJs Pork Gyoza Potstickers are a delicious and cheap staple of the Nick
+        Ng diet. Here is how he prepares them.</p>
+    <h2>Ingredients</h2>
+    <ul><li>potstickers</li>
+        <li>olive oil</li>
+        <li>apple cider vinegar</li>
+        <li>soy sauce</li></ul>
+    <h2>Steps</h2>
+    <ol><li>Drizzle olive oil onto large pan and heat until hot.</li>
+        <li>Place potstickers onto pan and cook on medium for 3min.</li>
+        <li>Add water into pan until 1/3 of potsticker height submerged, cover
+            with lid and cook for 3min.</li>
+        <li>Remove lid and unstick potstickers. Heat on high for 1min.</li>
+        <li>Creat dipping sauce of 1/3 soy sauce 2/3 apple cider vinegar.</li>
+        <li>Serve and enjoy!</li></ol>
 </body>
 </html>
