--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-        <a href="./recipes/gyoza.html">Gyoza</a>
+        <ul>
+            <li><a href="./recipes/gyoza.html">Gyoza</a></li>
+            <li><a href="./recipes/mango.html">Mango</a></li>
+            <li><a href="./recipes/burrito.html">Burrito</a></li>
 </body>
 </html>
