--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes Home</title>
+    <link rel="stylesheet" href="indexstyles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Nick's Trader Joe's Favorite Recipes</h1>
         <ul>
-            <li><a href="./recipes/gyoza.html">Gyoza</a></li>
-            <li><a href="./recipes/mango.html">Mango</a></li>
-            <li><a href="./recipes/burrito.html">Burrito</a></li>
+            <button><a href="./recipes/gyoza.html">Gyoza</a></button>
+            <button><a href="./recipes/mango.html">Mango</a></button>
+            <button><a href="./recipes/burrito.html">Burrito</a></button>
+        </ul>
 </body>
 </html>
